--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,66 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     android:background="#00838F"
-    tools:context=".Home">
-
-    <Button
-        android:id="@+id/Search"
-        android:layout_width="192dp"
-        android:layout_height="97dp"
-        android:text="חיפוש"
-        android:textColor="#00838F"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.938" />
+    tools:context=".HomeActivity">
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="300dp"
-        android:layout_height="37dp"
-        android:text="מתכונים מומלצים:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose your option"
         android:textColor="@color/white"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.082" />
+        android:textSize="34sp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="150sp"
+            android:layout_height="150sp"
+            android:text="Recipe List"
+            android:textColor="@color/black"
+            android:layout_marginRight="15sp"
+            android:id="@+id/btnHomeRecipeList"/>
+        <Button
+            android:layout_width="150sp"
+            android:layout_height="150sp"
+            android:text="Upload New Recipe"
+            android:textColor="@color/black"
+            android:id="@+id/btnHomeUploadNewRecipe"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="150sp"
+            android:layout_height="150sp"
+            android:text="Favorite Recipies"
+            android:textColor="@color/black"
+            android:layout_marginRight="15sp"
+            android:id="@+id/btnHomeFavoriteRecipies"/>
+        <Button
+            android:layout_width="150sp"
+            android:layout_height="150sp"
+            android:text="Alarm"
+            android:textColor="@color/black"
+            android:id="@+id/btnHomeAlarm"/>
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/Log_out"
-        android:layout_width="135dp"
-        android:layout_height="48dp"
-        android:text="התנתקות"
-        android:textColor="#009688"
-        android:textColorLink="#009688"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/go_to_favorites"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="680dp"
-        android:text="מועדפים"
-        android:textColor="#009688"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
