xml changes+ code in signIn and Registration

--- a/app/src/main/res/layout/activity_favorites_list.xml
+++ b/app/src/main/res/layout/activity_favorites_list.xml
@@ -5,14 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#009688"
-    tools:context=".Favorites_list">
+    android:background="#5C9B5E"
+    tools:context=".RecipeListsActivity">
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/tvRecipeLists"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="רשימת המועדפים"
+        android:text="Recipe List"
         android:textColor="@color/white"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,26 +22,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.09" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="293dp"
-        android:layout_height="321dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.423"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/alert_light_frame" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="293dp"
-        android:layout_height="321dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.423"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/alert_light_frame" />
 </androidx.constraintlayout.widget.ConstraintLayout>
