--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,53 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#5C9B5E"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="#00838F"
     tools:context=".HomeActivity">
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/tvHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose your option"
         android:textColor="@color/white"
-        android:textSize="34sp"/>
+        android:textSize="34sp" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
+            android:id="@+id/btnHomeRecipeList"
             android:layout_width="150sp"
             android:layout_height="150sp"
-            android:text="Recipe List"
-            android:textColor="@color/black"
             android:layout_marginRight="15sp"
-            android:id="@+id/btnHomeRecipeList"/>
+            android:text="Recipe List"
+            android:textColor="@color/black" />
+
         <Button
+            android:id="@+id/btnHomeUploadNewRecipe"
             android:layout_width="150sp"
             android:layout_height="150sp"
             android:text="Upload New Recipe"
-            android:textColor="@color/black"
-            android:id="@+id/btnHomeUploadNewRecipe"/>
+            android:textColor="@color/black" />
+
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
+            android:id="@+id/btnHomeFavoriteRecipies"
             android:layout_width="150sp"
             android:layout_height="150sp"
-            android:text="Favorite Recipies"
-            android:textColor="@color/black"
             android:layout_marginRight="15sp"
-            android:id="@+id/btnHomeFavoriteRecipies"/>
+            android:text="Favorite Recipies"
+            android:textColor="@color/black" />
+
         <Button
+            android:id="@+id/btnHomeAlarm"
             android:layout_width="150sp"
             android:layout_height="150sp"
+            android:layout_margin="15sp"
             android:text="Alarm"
-            android:textColor="@color/black"
-            android:id="@+id/btnHomeAlarm"/>
+            android:textColor="@color/black" />
+
     </LinearLayout>
 
 </LinearLayout>
