photos in recipeList

--- a/app/src/main/res/layout/activity_favorites_list.xml
+++ b/app/src/main/res/layout/activity_favorites_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5C9B5E"
+    android:background="#D3A101"
     tools:context=".RecipeFavoriteListActivity">
 
     <TextView
