--- a/app/src/main/res/layout/activity_first_screen.xml
+++ b/app/src/main/res/layout/activity_first_screen.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5C9B5E"
+    android:background="#D3A101"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".FirstScreenActivity">
@@ -14,8 +15,7 @@
         android:layout_height="wrap_content"
         android:text="MyRecipe"
         android:textColor="@color/white"
-        android:textSize="60sp"
-        />
+        android:textSize="60sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -25,20 +25,21 @@
 
         <Button
             android:id="@+id/btnFirstScreenLogIn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
             android:text="LogIn"
-            android:textColor="#5C9B5E" />
+            android:textColor="#D3A101"
+            android:textSize="24sp" />
 
 
-       <Button
-          android:id="@+id/btnFirstScreenSignUp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-           android:text="SignUp"
-            android:textColor="#5C9B5E"
+        <Button
+            android:id="@+id/btnFirstScreenSignUp"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
             android:layout_marginLeft="10sp"
-          />
+            android:text="SignUp"
+            android:textColor="#D3A101"
+            android:textSize="24sp" />
 
     </LinearLayout>
 
