--- a/app/src/main/res/layout/activity_recipe_example.xml
+++ b/app/src/main/res/layout/activity_recipe_example.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5C9B5E"
+    android:background="#D3A101"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".RecipeExampleActivity">
