--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5C9B5E"
+    android:background="#D3A101"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".Registration">
@@ -41,7 +41,7 @@
         android:layout_width="300sp"
         android:layout_height="wrap_content"
         android:text="SignUp"
-        android:textColor="#5C9B5E"
-       />
+        android:textColor="#D3A101"
+        android:textSize="20sp" />
 
 </LinearLayout>
