--- a/app/src/main/res/layout/activity_upload_new_recipe.xml
+++ b/app/src/main/res/layout/activity_upload_new_recipe.xml
@@ -14,27 +14,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Upload a New Recipe:"
+        android:text="Upload a New Recipe"
         android:textColor="@color/white"
-        android:textSize="48sp"
+        android:textSize="36sp"
          />
 
     <EditText
         android:id="@+id/etUploadNewRecipeName"
-        android:layout_width="400dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10sp"
         android:inputType="text"
         android:hint="Enter the name of the recipe:"
         android:textColorHint="@color/white"
-    android:textColor="@color/white"
+        android:textColor="@color/white"
         android:textSize="24sp"
  />
 
     <EditText
         android:id="@+id/etUploadNewRecipeIngredients"
-        android:layout_width="400dp"
-        android:layout_height="100dp"
-        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10sp"        android:inputType="text"
         android:hint="Enter the ingredients of the recipe:"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
@@ -43,23 +44,34 @@
 
     <EditText
         android:id="@+id/etUploadNewRecipeInstructions"
-        android:layout_width="400dp"
-        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10sp"
         android:inputType="text"
         android:hint="Enter the instructions of the recipe:"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:textSize="24sp"
          />
-
-    <Button
-        android:id="@+id/btnUploadNewRecipeUploadImage"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:text="Upload Image"
-        android:textColor="#D3A101"
-        android:textSize="24sp"
-        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <Button
+            android:id="@+id/btnSelectImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Image"
+            android:textColor="#D3A101"
+            android:textSize="18sp"
+            />
+            <ImageView
+            android:id="@+id/ivRecipeImage"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_margin="10sp"/>
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnUploadNewRecipeSaveRecipe"
