--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:id="@+id/etSignInEmail"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:hint="Enter you email"
+        android:hint="Enter your email..."
         android:inputType="textEmailAddress"
          />
 
@@ -33,7 +33,7 @@
         android:id="@+id/etSignInPass"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:hint="Enter your password"
+        android:hint="Enter your password..."
         android:inputType="textPassword"
          />
 
@@ -49,9 +49,8 @@
         android:id="@+id/btnSignInGoogle"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:text="Sign In with Gmail"
+        android:text="Sign In with Google"
         android:textColor="#D3A101"
-
         android:textSize="20sp" />
 
 
