--- a/app/src/main/res/layout/activity_recipe_example.xml
+++ b/app/src/main/res/layout/activity_recipe_example.xml
@@ -16,8 +16,10 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="RecipeName..."
+        android:textStyle="bold"
+        android:layout_marginBottom="30dp"
         android:textColor="@color/white"
-        android:textSize="34sp" />
+        android:textSize="30sp" />
 
 
     <LinearLayout
@@ -26,55 +28,72 @@
         android:orientation="horizontal">
 
 
-    <TextView
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+        <TextView
         android:id="@+id/tvRecipeExampleRecipeIngredientsTitle"
         android:layout_width="120sp"
         android:layout_height="wrap_content"
         android:text="Ingredients:"
         android:textStyle="bold"
+        android:layout_marginRight="40dp"
+        android:layout_gravity="start"
         android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textSize="22sp" />
 
-       <TextView
-            android:id="@+id/tvRecipeExampleRecipeInstructionsTitle"
-            android:layout_width="120sp"
-            android:layout_height="wrap_content"
-            android:text="Instructions:"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            <TextView
+                android:id="@+id/tvRecipeExampleRecipeIngredients"
+                android:layout_width="120sp"
+                android:layout_height="wrap_content"
+                android:text="Ingredients...."
+                android:textColor="@color/white"
+                android:layout_marginRight="40dp"
+                android:layout_gravity="start"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
-
-        <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tvRecipeExampleRecipeIngredients"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ingredients...."
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/tvRecipeExampleRecipeInstructions"
-                android:layout_width="120sp"
-                android:layout_height="wrap_content"
-                android:text="Instructions...."
-                android:textColor="@color/white"
-                android:textSize="18sp" />
+        <ImageView
+            android:id="@+id/ivRecipeExampleRecipeImage"
+            android:layout_width="172dp"
+            android:layout_marginTop="50dp"
+            android:layout_height="172dp"
+            tools:srcCompat="@tools:sample/avatars" />
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/ivRecipeExampleRecipeImage"
-        android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:orientation="vertical">
+
+
+
+    <TextView
+        android:id="@+id/tvRecipeExampleRecipeInstructionsTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Instructions:"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"
+        android:textColor="@color/white"
+        android:textSize="22sp" />
+
+    <TextView
+        android:id="@+id/tvRecipeExampleRecipeInstructions"
+        android:layout_width="350sp"
+        android:layout_height="wrap_content"
+        android:text="Instructions...."
+        android:textColor="@color/white"
+        android:textSize="20sp" />
+
 
 
 </LinearLayout>
+
+    </LinearLayout>
