--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_item_settings"
-        android:title="Settings"/>
+        android:id="@+id/menu_item_about"
+        android:title="About the app"/>
     <item
         android:id="@+id/menu_item_profile"
         android:title="Profile"/>
