--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#D3A101"
     android:gravity="center"
-    android:orientation="vertical"    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".AboutAppActivity">
 
     </LinearLayout>
